Fix incorrect drawing in PDF text selection.

When text selection consists of multiple rectangles that overlap, do not
highlight the overlapping portions multiple times.

BUG=596789

Change-Id: I8aa458f3050b045a8026646763912b6fae98e5e6